--- a/css/site.css
+++ b/css/site.css
@@ -14,4 +14,17 @@
 .site-index p { width: inherit; margin: 15px auto; text-align: justify;}
 .site-index legend {text-align: left; padding-left: 100px;}
 .control{width: 100%; text-align: left; padding-left: 100px;}
+.pPregunta{
+    text-transform: lowercase;
+}
+.pPregunta:first-letter{
+    text-transform: uppercase;
+}
+.lbRespuesta{
+    display: inline-block; margin-left: 10px;
+    text-transform: lowercase;
+}
+.lbRespuesta:first-letter{
+    text-transform: uppercase;
+}
 
